Prevent spill over from margins

--- a/src/styles/TimePicker.css
+++ b/src/styles/TimePicker.css
@@ -25,7 +25,6 @@
 	color: cornflowerblue;
 	letter-spacing: 1px;
 	font-size: 18px;
-    margin: 10px;
 	-webkit-transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
 	transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
 }
@@ -49,7 +48,6 @@
 	color: white;
 	letter-spacing: 1px;
 	font-size: 18px;
-    margin: 10px;
 	-webkit-transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
 	transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
 }
